adds install admin user

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "pragmatico cms",
   "require": {
     "cakephp/cakephp": "2.5.*",
-    "cakephp/debug_kit": "2.2.*"
+    "cakephp/debug_kit": "2.2.*",
+    "cakedc/migrations" : "2.3.*"
   },
   "config": {
     "vendor-dir": "Vendor/"
